v0.4 - fine permissions requested, refactoring